# imessage-cleanup

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh
CleanupApp/: App.swift  DeviceListView.swift  IDSBridge.swift  LoginView.swift  entitlements.plist
crates/cleanup-ffi/: Cargo.toml  build.rs
crates/cleanup-ffi/src/: hardware_info.h  hardware_info.m  lib.rs  local_config.rs  util.rs
nac-validation/: Cargo.toml  build.rs
nac-validation/src/: lib.rs  validation_data.h  validation_data.m
rustpush/: build.rs
rustpush/apple-private-apis/clearadi/: Cargo.toml  README.md
rustpush/apple-private-apis/clearadi/src/: lib.rs
rustpush/apple-private-apis/icloud-auth/src/: anisette.rs  client.rs  lib.rs
rustpush/apple-private-apis/omnisette/src/: anisette_clearadi.rs
rustpush/open-absinthe/: Cargo.toml  README.md  build.rs
rustpush/open-absinthe/src/: lib.rs  nac.rs
rustpush/open-absinthe/tests/: nac_test.rs
rustpush/src/: auth.rs  error.rs  lib.rs  macos.rs  test.rs  util.rs
rustpush/src/icloud/: cloudkit.rs  keychain.rs  pcs.rs
rustpush/src/ids/: identity_manager.rs  user.rs
rustpush/src/imessage/: cloud_messages.rs  messages.rs  rawmessages.rs
