[package]
name = "cleanup-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]
name = "cleanup_ffi"

[dependencies]
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25.0", features = ["tokio", "cli"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rustpush = { path = "../../rustpush", default-features = false }
keystore = { path = "../../rustpush/keystore" }
icloud_auth = { path = "../../rustpush/apple-private-apis/icloud-auth", default-features = false }
omnisette = { path = "../../rustpush/apple-private-apis/omnisette", default-features = false }
nac-validation = { path = "../../nac-validation" }
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
sha2 = "0.10"
thiserror = "1.0.47"
async-trait = "0.1.73"
base64 = "0.21"
libc = "0.2"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
cc = "1.0"
